<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/finn"
    tools:context=".PatientAdmittanceActivity" >



    <EditText
        android:id="@+id/name_field"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:textColorHint="@color/blue_base"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/hcn_field"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:textColorHint="@color/blue_base"
        android:hint="@string/hcn" />
    
    <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColorHint="@color/blue_base"
          android:text="@string/line" />
    
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:text="@string/dob" />
    
    <LinearLayout
        android:layout_width="286dp"
        android:layout_height="67dp"
        android:orientation="horizontal" >
    
    <EditText
        
        android:id="@+id/birthDay_field"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/blue_base"
        android:hint="@string/dd" />

    <EditText
        android:id="@+id/birthMonth_field"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/blue_base"
        android:hint="@string/mm" />

    <EditText
        android:id="@+id/birthYear_field"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/blue_base"
        android:hint="@string/yy" />

</LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="@color/blue_base"
    	android:alpha="0.9"
    	android:background="@drawable/mybutton"
        android:onClick= "admitThisPatient" />

</LinearLayout>
