<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/heart_pulse"
    tools:context=".RecordVitalsActivity" >


    <EditText
        android:id="@+id/temperature_field"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:hint="@string/temperature" />
    
        <EditText
        android:id="@+id/systolic_field"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:hint="@string/systolic" />
        
            <EditText
        android:id="@+id/diastolic_field"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:hint="@string/diastolic" />
            
            <EditText
        android:id="@+id/hr_field"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:hint="@string/hr" />
            
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:text="@string/update_vitals"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/mybutton"
        android:onClick="recordSomeVitals" />
    
    

</LinearLayout>
