<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".NurseOptionsActivity" >

    <TextView
        android:id="@+id/basicInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options" />
    
        <Button
        android:id="@+id/button1"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:onClick="displayPatient"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#000000"
    	android:alpha="0.7"
    	android:background="@drawable/mybutton"
        android:text="@string/display_patient" />

        <Button
        android:id="@+id/button2"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="recordVitals"
        android:textStyle="bold"
       	android:padding="10dp"
    	android:textColor="#000000"
    	android:alpha="0.7"
    	android:background="@drawable/mybutton"
        android:text="@string/record_vitals" />

        
        <Button
        android:id="@+id/button3"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/set_as_seen"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#000000"
    	android:alpha="0.7"
    	android:background="@drawable/mybutton"
        android:onClick= "setAsSeen" />
        
                <Button
        android:id="@+id/button4"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/home"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#000000"
    	android:alpha="0.7"
    	android:background="@drawable/mybutton"
        android:onClick= "goHome" />

</LinearLayout>
