
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".FindPatientActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_patient" />

    <EditText
        android:id="@+id/load_from_hcn_field"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:hint="@string/hcn" />

    <Button
        android:alpha="0.9"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/my_button"
        android:onClick= "getThatPatient" />
    
    

</LinearLayout>
