<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".PasswordManager" >

    <EditText
        android:id="@+id/user_name_field"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >

        
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="151dp"
        android:onClick="signIn"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/mybutton"
        android:text="@string/submit" />


</LinearLayout>