<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/stethoscope"
    tools:context=".PrescribeMedicationActivity" >

    <EditText
        android:id="@+id/prescription_name_field"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/prescription_name" />

    <EditText
        android:id="@+id/instructions_field"
        android:layout_width="271dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.26"
        android:hint="@string/prescription_instructions" />

    <Button
        android:alpha="0.9"
        android:id="@+id/button_record_prescription"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:onClick="recordPrescriptionInfo"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/my_button"
        android:text="@string/record_prescription" />

</LinearLayout>