<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/caduceus"
    tools:context=".HomeScreenActivity" >

    <Button
		android:alpha="0.9"
        android:id="@+id/button1"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="28dp"
        android:onClick="newPatient"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/mybutton"
        android:text="@string/new_patient" />

    <Button
		android:alpha="0.9"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="32dp"
        android:onClick="findPatient"
        android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/mybutton"
        android:text="@string/load_patient" />
    
	<Button
		android:alpha="0.9"
	    android:id="@+id/button3"
	    android:layout_width="266dp"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="17dp"
	    android:layout_marginTop="32dp"
	    android:onClick="displayByUrgency"
	    android:textStyle="bold"
        android:padding="10dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/mybutton"
	    android:text="@string/urgency_list" />

</LinearLayout>

